pk: use the file path as the origin for local file resources

BUG: 400044